--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <title>Danielanywhere on GitHub</title>
-<link href="Default.css" rel="stylesheet" type="text/css">
+<link href="default.css" rel="stylesheet" type="text/css">
 </head>
 <body>
 <h1>Daniel Patterson's GitHub Projects</h1>
