--- a/index.html
+++ b/index.html
@@ -9,14 +9,14 @@
 <p>Thank you for checking out my GitHub projects page.</p>
 <p>I currently have (1) open project here.</p>
 <div>
-	<h1>PyDoc</h1>
+	<h1>autoPyDoc</h1>
 	<div class="description">An automated language documentation
 		generator for the Python language, written in C#.</div>
 	<blockquote>
 		<h3>Project Content</h3>
 		<p>The project source is located at
-			<a href="https://github.com/danielanywhere/PyDoc">
-				https://github.com/danielanywhere/PyDoc</a></p>
+			<a href="https://github.com/danielanywhere/autoPyDoc">
+				https://github.com/danielanywhere/autoPyDoc</a></p>
 		<h3>Project API Documentation</h3>
 		<p>A basic API can be found <a href="PyDocDocumentation.html">here</a>.<br />
 			<a href="PyDocDocumentation.html">PyDocDocumentation.html</a>
