Add hint for opening page source

--- a/VideoPlayer/Index.html
+++ b/VideoPlayer/Index.html
@@ -8,7 +8,10 @@
 </head>
 <body>
 	<h1>Embedded Video Player</h1>
-	<p>Sample iframe link follows:</p>
+	<p>Sample iframe link follows. If you would like to see the actual markup for
+		this window, right-click in an empty area of the page and select
+		<b>View Page Source</b>.
+	</p>
 	<iframe width="700" height="394"
 	src="https://danielanywhere.github.io/VideoPlayer/VideoPlayer.html?showHotspot=0&video=ForcedPerspective-2019051303.mp4&buttonTime=53&buttonLeft=1.302&buttonTop=10.463&buttonWidth=28.125&buttonHeight=23.704&target=TestTarget.html"></iframe>
 </body>
