--- a/VideoPlayer/Index.html
+++ b/VideoPlayer/Index.html
@@ -1,5 +1,14 @@
 <!doctype html>
 <html lang="en">
+<!--
+	Index.html
+	Example index containing a working IFRAME reference to the VideoPlayer.html
+	control.
+
+	Copyright (c). 2020 Daniel Patterson, MCSD (danielanywhere)
+	Released for public access under the MIT License.
+	http://www.opensource.org/licenses/mit-license.php
+-->
 <head>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
@@ -13,6 +22,6 @@
 		<b>View Page Source</b>.
 	</p>
 	<iframe width="700" height="394"
-	src="https://danielanywhere.github.io/VideoPlayer/VideoPlayer.html?showHotspot=0&video=ForcedPerspective-2019051303.mp4&buttonTime=53&buttonLeft=1.302&buttonTop=10.463&buttonWidth=28.125&buttonHeight=23.704&target=TestTarget.html"></iframe>
+	src="https://danielanywhere.github.io/VideoPlayer/VideoPlayer.html?showHotspot=0&video=videos%2FForcedPerspective-2019051303.mp4&buttonTime=53&buttonLeft=1.302&buttonTop=10.463&buttonWidth=28.125&buttonHeight=23.704&target=TestTarget.html"></iframe>
 </body>
 </html>
