--- a/index.html
+++ b/index.html
@@ -2,26 +2,62 @@
 <html>
 <head>
 <title>Danielanywhere on GitHub</title>
+<link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
+<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Raleway">
 <link href="default.css" rel="stylesheet" type="text/css">
 </head>
-<body>
-<h1>Daniel Patterson's GitHub Projects</h1>
-<p>Thank you for checking out my GitHub projects page.</p>
-<p>I currently have (1) open project here.</p>
-<div>
-	<h1>autoPyDoc</h1>
-	<div class="description">An automated language documentation
-		generator for the Python language, written in C#.</div>
-	<blockquote>
-		<h3>Project Content</h3>
-		<p>The project source is located at
-			<a href="https://github.com/danielanywhere/autoPyDoc">
-				https://github.com/danielanywhere/autoPyDoc</a></p>
-		<h3>Project API Documentation</h3>
-		<p>A basic API can be found <a href="PyDocDocumentation.html">here</a>.<br />
-			<a href="PyDocDocumentation.html">PyDocDocumentation.html</a>
-		</p>
-	</blockquote>
+<body class="w3-light-grey">
+<!-- Maintained with the help of W3 themes. https://www.w3schools.com/w3css/w3css_templates.asp -->
+<!-- w3-content defines a container for fixed size centered content, 
+and is wrapped around the whole page content, except for the footer in this example -->
+<div class="w3-content" style="max-width:1400px">
+
+<!-- Header -->
+<header class="w3-container w3-center w3-padding-32">
+	<h1><b>DOCUMENTATION</b></h1>
+	<p>Welcome to the project documentation pages for <span class="w3-tag">Danielanywhere</span></p>
+</header>
+
+<p>Please click on any of the following entries to view that topic.</p>
+
+	<!-- Posts -->
+	<div class="w3-card w3-margin">
+		<div class="w3-container w3-padding">
+			<h4>Available Topics</h4>
+		</div>
+		<ul class="w3-ul w3-hoverable w3-white">
+			<li class="w3-padding-16"><a href="ConversionCalc/index.html">
+				<img src="images/ConversionCalcLogo.png" alt="Image" class="w3-left w3-margin-right" style="width:50px">
+				<span class="w3-large">Dan's ConversionCalc Library API</span><br>
+				<span>An easy-to-implement function library providing generic numeric
+				conversions in a wide array of possible scenarios for engineering and
+				practical applications.
+				</span>
+			</a></li>
+			<li class="w3-padding-16"><a href="Geometry/index.html">
+				<img src="images/GeometryLogo.png" alt="Image" class="w3-left w3-margin-right" style="width:50px">
+				<span class="w3-large">Dan's Geometry Library API</span><br>
+				<span>An easy-to-implement function library providing numeric operations to
+				handle solutions to typical problems encountered in the field of
+				geometry, including Bezier Curves, Linear Interpolation (Lerp), and
+				Trigonometry.
+				</span>
+			</a></li>
+		</ul>
+	</div>
+	<hr>
+	<!-- /Posts -->
+
+
+<!-- END w3-content -->
 </div>
+
+<!-- Footer -->
+<footer class="w3-container w3-dark-grey w3-padding-32 w3-margin-top">
+	<!-- <button class="w3-button w3-black w3-disabled w3-padding-large w3-margin-bottom">Previous</button> -->
+	<!-- <button class="w3-button w3-black w3-padding-large w3-margin-bottom">Next »</button> -->
+	<p>Powered by <a href="https://www.w3schools.com/w3css/default.asp" target="_blank">w3.css</a></p>
+</footer>
+
 </body>
 </html>
