--- a/index.html
+++ b/index.html
@@ -56,7 +56,8 @@ and is wrapped around the whole page content, except for the footer in this exam
 <footer class="w3-container w3-dark-grey w3-padding-32 w3-margin-top">
 	<!-- <button class="w3-button w3-black w3-disabled w3-padding-large w3-margin-bottom">Previous</button> -->
 	<!-- <button class="w3-button w3-black w3-padding-large w3-margin-bottom">Next »</button> -->
-	<p>Powered by <a href="https://www.w3schools.com/w3css/default.asp" target="_blank">w3.css</a></p>
+	<p>Copyright &copy; 2025. Daniel Patterson, MCSD (danielanywhere).</p>
+	<p>Theme powered by <a href="https://www.w3schools.com/w3css/default.asp" target="_blank">w3.css</a></p>
 </footer>
 
 </body>
