--- a/Geometry/html/P_Geometry_CameraOrtho_Rotation.htm
+++ b/Geometry/html/P_Geometry_CameraOrtho_Rotation.htm
@@ -5,8 +5,8 @@
 	<span class="keyword">Set</span></code></pre></div></div><div class="codeSnippet is-hidden" data-codeSnippetLanguage="asp"><div class="codeHeader"><span class="codeHeaderTitle">ASP.NET</span><span class="buttons"><button class="button is-small is-light copyCode" title="Copy"><span class="icon is-small"><i class="fa fa-copy"></i></span><span>Copy</span></button></span></div><div class="codePanel hljs"><pre xml:space="preserve"><code class="language-plaintext">No code example is currently available or this language may not be supported.</code></pre></div></div><h4>Property Value</h4><a href="T_Geometry_FVector3.htm">FVector3</a></div><h2 class="quickLinkHeader"><span class="icon toggleSection" tabindex="0"><i class="fa fa-angle-down"></i></span>Remarks</h2><div id="IDBCSection"><p>
             In this version, Pitch rotates upward and Yaw rotates left.
             </p><p>
-            Natural camera-forward (eg Rotation 0,0,0) is rightward on
-            X-axis.
+            Natural camera-forward (eg Rotation 0,0,0) is forward on
+            Z-axis.
             </p></div><h2 class="quickLinkHeader"><span class="icon toggleSection" tabindex="0"><i class="fa fa-angle-down"></i></span>See Also</h2><div id="seeAlsoSection"><h4>Reference</h4><div><a href="T_Geometry_CameraOrtho.htm">CameraOrtho Class</a></div><div><a href="N_Geometry.htm">Geometry Namespace</a></div></div></div><div id="InThisArticleColumn" class="column is-hidden-mobile"><nav class="menu sticky is-hidden"><p class="menu-label"><strong>In This Article</strong></p><ul id="InThisArticleMenu" class="menu-list"><li><a class="quickLink">Definition</a></li><li><a class="quickLink">Remarks</a></li><li><a class="quickLink">See Also</a></li></ul></nav></div></div></div></div><script>$(function(){
 SetDefaultLanguage("cs");
 LoadTocFile(null, null);
