Update Index page
Added links to Html and SvgPlotting libraries.

--- a/index.html
+++ b/index.html
@@ -43,6 +43,15 @@ and is wrapped around the whole page content, except for the footer in this exam
 				Trigonometry.
 				</span>
 			</a></li>
+			<li class="w3-padding-16"><a href="Html/index.html">
+				<img src="images/HtmlLogo.png" alt="Image" class="w3-left w3-margin-right" style="width:50px">
+				<span class="w3-large">Dan's Html Library API</span><br>
+				<span>An easy-to-use .NET function library for parsing and directly handling
+					HTML and similar markup languages that use angle-bracketed tags. It supports
+					structures where opening tags may contain name="value" property assignments,
+					such as XML.
+				</span>
+			</a></li>
 			<li class="w3-padding-16"><a href="ShopTools/index.html">
 				<img src="images/ShopToolsLogo.png" alt="Image" class="w3-left w3-margin-right" style="width:50px">
 				<span class="w3-large">Dan's ShopTools Desktop SDK</span><br>
@@ -50,6 +59,13 @@ and is wrapped around the whole page content, except for the footer in this exam
 				or CAM.</a>
 				</span>
 			</a></li>
+			<li class="w3-padding-16"><a href="SvgPlotting/index.html">
+					<img src="images/SvgPlottingLogo.png" alt="Image" class="w3-left w3-margin-right" style="width:50px">
+					<span class="w3-large">Dan's SVG Plotting Library API</span><br>
+					<span>Convert curves from SVGs directly into physical, straight‑line plotting
+						instructions and completely skip the idea of manual curve flattening!
+					</span>
+				</a></li>
 		</ul>
 	</div>
 	<hr>
